---
source: spade-tests/src/typeinference.rs
---
fn test(x: [int<8>; 6]) -> [int<8>; 2] {
    x[5..7]
}


error: Range index out of bounds
  ┌─ testinput:2:10
  │
2 │     x[5..7]
  │     -    ^ Index `7` out of bounds
  │     │     
  │     The array only has 6 elements
